components/horizontalSection/horizontalSection.module.css
.scrollSectionOuter {
    overflow: hidden;
    position: relative;
  }
  
  .scrollSectionInner {
    height: 100vh;
    width: 400vw;
    display: flex;
    flex-direction: row;
    position: relative;
  }
  
  .scrollSection {
    height: 100vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
  }

/* STYLE POUR SECTION 1 (= BACKGROUNDLINES) */

.backgroundLines {
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    gap: 48px;
    position: relative;
  }
  
  .moi {
    height: clamp(200px, 20vw, 300px);
    width: clamp(200px, 20vw, 300px);
    border-radius: 50%;
    object-fit: cover;
    object-position: top;
    z-index: 2;
    filter: grayscale(100%);
  }
  

  /* STYLES POUR SECTION 2 */
  
  .titre {
    position: absolute;
    top: 125px;
    right: 50%;
    transform: translateX(50%);
    z-index: 20;
    width: fit-content;
    font-size: clamp(2rem, 8vw, 5.25rem);
    white-space: nowrap;
    font-weight: 600;
  }

